# ChangeLog for media-sound/zinf
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/zinf/Attic/ChangeLog,v 1.34 2005/10/08 16:05:44 vanquirius Exp $

  08 Oct 2005; Marcelo Goes <vanquirius@gentoo.org> zinf-2.2.5-r2.ebuild:
  Mark 2.2.5-r2 x86 stable.

*zinf-2.2.5-r2 (31 Jul 2005)

  31 Jul 2005; Marcelo Goes <vanquirius@gentoo.org>
  -files/zinf-2.2.3-id3.patch.bz2, -files/zinf-2.2.4-pref.patch,
  +files/zinf-2.2.5-rtp.patch, +zinf-2.2.5-r2.ebuild:
  Attempting to fix UI plugin bug in bug 97674 and Invalid URL bug in bug
  69311. Thanks to samx <gentoo@die-genossen.de>, Markus <bugs@rennings.net>
  and others.

  27 May 2005; Jan Brinkmann <luckyduck@gentoo.org> zinf-2.2.5-r1.ebuild:
  added libtoolize call, fixes #94149. also introduced support for the xosd
  useflag, fixes #94143. cleaned up the ebuild generally

  19 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org> -zinf-2.2.3.ebuild,
  -zinf-2.2.4.ebuild:
  Removing old versions.

  06 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  zinf-2.2.5-r1.ebuild:
  get_libdir fixes.

  15 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  +files/zinf-2.2.5-configure.patch:
  Fixups for configure to handle --disable-corba to close bug #56569.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> zinf-2.2.5-r1.ebuild:
  Stable amd64.

  14 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org> zinf-2.2.5-r1.ebuild:
  Added sys-libs/gdbm dependency to fix bug #53842.

*zinf-2.2.5-r1 (16 Apr 2004)

  16 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> zinf-2.2.5-r1.ebuild,
  zinf-2.2.5.ebuild, files/zinf-2.2.5-cdplay.patch:
  Bump to include cdplaying bugfix reported by Anatoly <aanatoly@users.sf.net>
  in bug #47808.

  31 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org> zinf-2.2.5.ebuild:
  Stable x86.

  26 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org> zinf-2.2.3.ebuild,