@@ -1,9 +1,11 @@
 MD5 f70ce7442417fa0d2b36c6f4a655b77e zinf-2.2.5-r2.ebuild 2098
 MD5 15c4260b39deda579a3563c58aae5f36 zinf-2.2.5-r1.ebuild 2301
-MD5 e4e8398e85e97839555e879fd8054e1f ChangeLog 5466
+MD5 6e5af064601d3afcb6e756114693c66d zinf-2.2.5-r3.ebuild 2288
+MD5 c801fcb98208b0de5738d2e7e026328b ChangeLog 5636
 MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
 MD5 5f73b5d7a0fb9346d25c7f59e71509b8 files/zinf-2.2.5-cdplay.patch 1042
 MD5 e4ec1ffc5f5099848c9d55df07d85d5a files/digest-zinf-2.2.5-r1 63
 MD5 e4ec1ffc5f5099848c9d55df07d85d5a files/digest-zinf-2.2.5-r2 63
+MD5 e4ec1ffc5f5099848c9d55df07d85d5a files/digest-zinf-2.2.5-r3 63
 MD5 f759a0b5765809ee26d70a83f6c6185b files/zinf-2.2.5-rtp.patch 582
 MD5 ab18405737d54fde371a5e1ceb8dc3e7 files/zinf-2.2.5-configure.patch 3782
