@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/zinf
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/zinf/Attic/ChangeLog,v 1.34 2005/10/08 16:05:44 vanquirius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/zinf/Attic/ChangeLog,v 1.35 2005/10/22 13:09:32 matsuu Exp $
+
+*zinf-2.2.5-r3 (22 Oct 2005)
+
+  22 Oct 2005; MATSUU Takuto <matsuu@gentoo.org> +zinf-2.2.5-r3.ebuild:
+  Fixed xosd dependency. Bug 94143.
+  Replace gnome USE flag to corba.
 
   08 Oct 2005; Marcelo Goes <vanquirius@gentoo.org> zinf-2.2.5-r2.ebuild:
   Mark 2.2.5-r2 x86 stable.
